testing test module

--- a/contents/index.html
+++ b/contents/index.html
@@ -73,7 +73,8 @@
 				<h1>Modules</h1>                                
 				<highlight>Modular topics to be used in compiling diverse protocols and presentations. <br />Feel free to copy, adapt and reuse!</highlight>
 				<br />
-				<ul>                                                
+				<ul>         
+					<li> <a href="../presentations/modules/test-module/index.html" target="_blank">Test Module</a></li>
 					<li> <a href="../presentations/modules/finding-network-data/index.html" target="_blank">Finding Network Data</a></li>
 					<li> <a href="../presentations/modules/intro-cytoscape/index.html" target="_blank">Introduction to Cytoscape</a></li>
 					<li> <a href="../presentations/modules/intro-network-biology/index.html" target="_blank">Introduction to Network Biology</a></li>
